[project]
name = "dataset-merger"
version = "0.1.0"
authors = [
    {name="Usama Mangi", email="usamamangi.fl@gmail.com"},
]
description = "A python package to merge datasets of various formats (COCO, JSON, etc) into one dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "tqdm>=4.67.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/UsamaGM/dataset-merger"
Issues = "https://github.com/UsamaGM/dataset-merger/issues"